Update bird webhook and tables
